--- a/app/Resources/views/layout/layout.html.twig
+++ b/app/Resources/views/layout/layout.html.twig
@@ -22,10 +22,10 @@
     <link href="{{ asset('assets/global/plugins/bootstrap-switch/css/bootstrap-switch-rtl.min.css')}}" rel="stylesheet" type="text/css" />
     <!-- END GLOBAL MANDATORY STYLES -->
     <!-- BEGIN PAGE LEVEL PLUGINS -->
-    <link href="{{ asset('assets/global/plugins/bootstrap-daterangepicker/daterangepicker.min.css')}}" rel="stylesheet" type="text/css" />
-    <link href="{{ asset('assets/global/plugins/morris/morris.css')}}" rel="stylesheet" type="text/css" />
-    <link href="{{ asset('assets/global/plugins/fullcalendar/fullcalendar.min.css')}}" rel="stylesheet" type="text/css" />
-    <link href="{{ asset('assets/global/plugins/jqvmap/jqvmap/jqvmap.css')}}" rel="stylesheet" type="text/css" />
+    {#<link href="{{ asset('assets/global/plugins/bootstrap-daterangepicker/daterangepicker.min.css')}}" rel="stylesheet" type="text/css" />#}
+    {#<link href="{{ asset('assets/global/plugins/morris/morris.css')}}" rel="stylesheet" type="text/css" />#}
+    {#<link href="{{ asset('assets/global/plugins/fullcalendar/fullcalendar.min.css')}}" rel="stylesheet" type="text/css" />#}
+    {#<link href="{{ asset('assets/global/plugins/jqvmap/jqvmap/jqvmap.css')}}" rel="stylesheet" type="text/css" />#}
     <!-- END PAGE LEVEL PLUGINS -->
     <!-- BEGIN THEME GLOBAL STYLES -->
     <link href="{{ asset('assets/global/css/components-rtl.min.css')}}" rel="stylesheet" id="style_components" type="text/css" />
@@ -185,7 +185,7 @@ app.request.attributes.get('_route_params')) %}
 <script src="{{ asset('assets/global/scripts/app.min.js')}}" type="text/javascript"></script>
 <!-- END THEME GLOBAL SCRIPTS -->
 <!-- BEGIN PAGE LEVEL SCRIPTS -->
-<script src="{{ asset('assets/pages/scripts/dashboard.min.js')}}" type="text/javascript"></script>
+{#<script src="{{ asset('assets/pages/scripts/dashboard.min.js')}}" type="text/javascript"></script>#}
 <!-- END PAGE LEVEL SCRIPTS -->
 <!-- BEGIN THEME LAYOUT SCRIPTS -->
 {#<script src="{{ asset('assets/layouts/layout3/scripts/layout.min.js')}}" type="text/javascript"></script>#}
