--- a/app/Resources/views/layout/layout.html.twig
+++ b/app/Resources/views/layout/layout.html.twig
@@ -162,6 +162,7 @@ app.request.attributes.get('_route_params')) %}
 <!-- END CORE PLUGINS -->
 <!-- BEGIN PAGE LEVEL PLUGINS -->
 <script src="{{ asset('assets/global/plugins/moment.min.js')}}" type="text/javascript"></script>
+<script src="{{ asset('assets/layouts/js/app.js')}}" type="text/javascript"></script>
 {#<script src="{{ asset('assets/global/plugins/bootstrap-daterangepicker/daterangepicker.min.js')}}" type="text/javascript"></script>#}
 {#<script src="{{ asset('assets/global/plugins/morris/morris.min.js')}}" type="text/javascript"></script>#}
 {#<script src="{{ asset('assets/global/plugins/morris/raphael-min.js')}}" type="text/javascript"></script>#}
