--- a/app/Resources/views/page/contract.html.twig
+++ b/app/Resources/views/page/contract.html.twig
@@ -43,6 +43,7 @@
                                             مشکل زیر رخ داده است:
                                             {{ form_errors(form.companyName) }}
                                             {{ form_errors(form.userName) }}
+                                            {{ form_errors(form.contractType) }}
                                             {{ form_errors(form.register) }}
                                             {{ form_errors(form.phone) }}
                                             {{ form_errors(form.telegram) }}
@@ -70,33 +71,39 @@
                                             </div>
                                         </div>
                                         <div class="form-group">
+                                            <label class="col-md-3 control-label">نوع قرارداد:</label>
+                                            <div class="col-md-4">
+                                                    {{  form_widget(form.contractType,{'attr':{'class':'form-control contractType'}})}}
+                                            </div>
+                                        </div>
+                                        <div class="form-group contractIRecharge">
                                             <label class="col-md-3 control-label">تمدید:</label>
                                             <div class="col-md-4">
-                                                    {{  form_widget(form.recharge,{'attr':{'class':'form-control'}})}}
+                                                    {{  form_widget(form.recharge,{'attr':{'class':'form-control '}})}}
                                             </div>
                                         </div>
-                                        <div class="form-group">
+                                        <div class="form-group contractIRegister">
                                             <label class="col-md-3 control-label">رجیستری:</label>
                                             <div class="col-md-4">
-                                                    {{  form_widget(form.register,{'attr':{'class':'form-control'}})}}
+                                                    {{  form_widget(form.register,{'attr':{'class':'form-control '}})}}
                                             </div>
                                         </div>
-                                        <div class="form-group">
+                                        <div class="form-group contractIPhone">
                                             <label class="col-md-3 control-label">تلفنی:</label>
                                             <div class="col-md-4">
-                                                    {{  form_widget(form.phone,{'attr':{'class':'form-control'}})}}
+                                                    {{  form_widget(form.phone,{'attr':{'class':'form-control '}})}}
                                             </div>
                                         </div>
-                                        <div class="form-group">
+                                        <div class="form-group contractITelegram">
                                             <label class="col-md-3 control-label">تلگرام:</label>
                                             <div class="col-md-4">
-                                                    {{  form_widget(form.telegram,{'attr':{'class':'form-control'}})}}
+                                                    {{  form_widget(form.telegram,{'attr':{'class':'form-control '}})}}
                                             </div>
                                         </div>
-                                        <div class="form-group">
+                                        <div class="form-group contractIDirect" >
                                             <label class="col-md-3 control-label">مستقیم-نمایشگاهی:</label>
                                             <div class="col-md-4">
-                                                    {{  form_widget(form.direct,{'attr':{'class':'form-control'}})}}
+                                                    {{  form_widget(form.direct,{'attr':{'class':'form-control '}})}}
                                             </div>
                                         </div>
 
