--- a/app/Resources/views/layout/layout.html.twig
+++ b/app/Resources/views/layout/layout.html.twig
@@ -32,6 +32,8 @@
     <link href="{{ asset('assets/global/css/plugins-rtl.min.css')}}" rel="stylesheet" type="text/css" />
     <!-- END THEME GLOBAL STYLES -->
     <!-- BEGIN THEME LAYOUT STYLES -->
+
+        <link href="{{asset('assets/calander/css/persian-datepicker-0.4.5.css')}}" rel="stylesheet" type="text/css"/>
     <link href="{{ asset('assets/layouts/layout3/css/layout-rtl.min.css')}}" rel="stylesheet" type="text/css" />
     <link href="{{ asset('assets/layouts/layout3/css/themes/default-rtl.min.css')}}" rel="stylesheet" type="text/css" id="style_color" />
     <link href="{{ asset('assets/layouts/layout3/css/custom-rtl.min.css')}}" rel="stylesheet" type="text/css" />
@@ -153,6 +155,14 @@ app.request.attributes.get('_route_params')) %}
 <script src="{{ asset('assets/global/plugins/ie8.fix.min.js')}}"></script>
 <![endif]-->
 <!-- BEGIN CORE PLUGINS -->
+
+
+
+
+
+
+
+
 <script src="{{ asset('assets/global/plugins/jquery.min.js')}}" type="text/javascript"></script>
 <script src="{{ asset('assets/global/plugins/bootstrap/js/bootstrap.min.js')}}" type="text/javascript"></script>
 <script src="{{ asset('assets/global/plugins/js.cookie.min.js')}}" type="text/javascript"></script>
@@ -161,6 +171,8 @@ app.request.attributes.get('_route_params')) %}
 <script src="{{ asset('assets/global/plugins/bootstrap-switch/js/bootstrap-switch.min.js')}}" type="text/javascript"></script>
 <!-- END CORE PLUGINS -->
 <!-- BEGIN PAGE LEVEL PLUGINS -->
+<script type="text/javascript" src="{{asset('assets/calander/lib/persian-date.js')}}"></script>
+<script type="text/javascript" src="{{asset('assets/calander/js/persian-datepicker-0.4.5.min.js')}}"></script>
 <script src="{{ asset('assets/global/plugins/moment.min.js')}}" type="text/javascript"></script>
 <script src="{{ asset('assets/layouts/js/app.js')}}" type="text/javascript"></script>
 {#<script src="{{ asset('assets/global/plugins/bootstrap-daterangepicker/daterangepicker.min.js')}}" type="text/javascript"></script>#}
