--- a/app/Resources/views/page/contract.html.twig
+++ b/app/Resources/views/page/contract.html.twig
@@ -49,6 +49,7 @@
                                             {{ form_errors(form.telegram) }}
                                             {{ form_errors(form.direct) }}
                                             {{ form_errors(form.serviceItems) }}
+                                            {{ form_errors(form.contractDate) }}
                                             {{ form_errors(form.shareItems) }}
                                             {{ form_errors(form.separate) }}
                                             {{ form_errors(form.contractPrice) }}
@@ -64,16 +65,22 @@
                                                 {{  form_widget(form.companyName,{'attr':{'class':'form-control input-inline input-medium'}})}}
                                             </div>
                                         </div>
+
                                         <div class="form-group">
                                             <label class="col-md-3 control-label">نام کاربری:</label>
                                             <div class="col-md-9">
                                                 {{  form_widget(form.userName,{'attr':{'class':'form-control input-inline input-medium'}})}}
                                             </div>
                                         </div>
-                                        <div class="form-group">
+                                        <div class="form-group col-md-12">
                                             <label class="col-md-3 control-label">نوع قرارداد:</label>
                                             <div class="col-md-4">
                                                     {{  form_widget(form.contractType,{'attr':{'class':'form-control contractType'}})}}
+                                            </div>
+                                            <label class="col-md-1 control-label">تاریخ:</label>
+                                            <div class="col-md-4">
+                                                {{  form_widget(form.contractDate,{'attr':{'class':'form-control'}})}}
+                                                {#<input id="default" type="text" class="form-control" name="contractTime"/>#}
                                             </div>
                                         </div>
                                         <div class="form-group contractIRecharge">
