--- a/app/Resources/views/page/contract.html.twig
+++ b/app/Resources/views/page/contract.html.twig
@@ -50,6 +50,7 @@
                                             {{ form_errors(form.direct) }}
                                             {{ form_errors(form.serviceItems) }}
                                             {{ form_errors(form.contractDate) }}
+                                            {{ form_errors(form.contractTime) }}
                                             {{ form_errors(form.shareItems) }}
                                             {{ form_errors(form.separate) }}
                                             {{ form_errors(form.contractPrice) }}
@@ -72,6 +73,13 @@
                                                 {{  form_widget(form.userName,{'attr':{'class':'form-control input-inline input-medium'}})}}
                                             </div>
                                         </div>
+                                        <div class="form-group">
+                                            <label class="col-md-3 control-label">مدت قرارداد:</label>
+                                            <div class="col-md-9">
+
+                                                {{  form_widget(form.contractTime,{'attr':{'class':'form-control input-inline input-medium','type':'hiden'}})}}
+                                            </div>
+                                        </div>
                                         <div class="form-group col-md-12">
                                             <label class="col-md-3 control-label">نوع قرارداد:</label>
                                             <div class="col-md-4">
@@ -80,7 +88,7 @@
                                             <label class="col-md-1 control-label">تاریخ:</label>
                                             <div class="col-md-4">
                                                 {{  form_widget(form.contractDate,{'attr':{'class':'form-control'}})}}
-                                                {#<input id="default" type="text" class="form-control" name="contractTime"/>#}
+                                                <input id="contractDateextra" type="text" class="form-control" name="contractTime"/>
                                             </div>
                                         </div>
                                         <div class="form-group contractIRecharge">
