set readonly discount and extra

--- a/app/Resources/views/page/contract.html.twig
+++ b/app/Resources/views/page/contract.html.twig
@@ -153,7 +153,7 @@
                                         <div class="form-group">
                                             <label class="col-md-3 control-label">مبلغ تخفیف:</label>
                                             <div class="col-md-9">
-                                                {{  form_widget(form.discount,{'attr':{'class':'form-control input-inline input-medium'}})}}
+                                                {{  form_widget(form.discount,{'attr':{'class':'form-control input-inline input-medium','disabled':'disabled'}})}}
                                             </div>
                                         </div>
                                         <div class="form-group">
