--- a/app/Resources/views/layout/layout.html.twig
+++ b/app/Resources/views/layout/layout.html.twig
@@ -109,7 +109,7 @@ app.request.attributes.get('_route_params')) %}
                                     </a>
                                 </li>
                                 <li aria-haspopup="true" class="menu-dropdown mega-menu-dropdown  mega-menu-full">
-                                    <a href="/"> پیش فاک
+                                    <a href="/"> پیش فاکتور
                                     </a>
                                 </li>
                                 <li aria-haspopup="true" class="menu-dropdown classic-menu-dropdown ">
