add jquery date and extra

--- a/app/Resources/views/layout/layout.html.twig
+++ b/app/Resources/views/layout/layout.html.twig
@@ -32,7 +32,8 @@
     <link href="{{ asset('assets/global/css/plugins-rtl.min.css')}}" rel="stylesheet" type="text/css" />
     <!-- END THEME GLOBAL STYLES -->
     <!-- BEGIN THEME LAYOUT STYLES -->
-
+        <link href="{{ asset('assets/global/plugins/datatables/datatables.min.css')}}" rel="stylesheet" type="text/css" />
+        <link href="{{ asset('assets/global/plugins/datatables/plugins/bootstrap/datatables.bootstrap-rtl.css')}}" rel="stylesheet" type="text/css" />
         <link href="{{asset('assets/layouts/layout3/css/persianDatepicker-default.css')}}" rel="stylesheet" type="text/css"/>
     <link href="{{ asset('assets/layouts/layout3/css/layout-rtl.min.css')}}" rel="stylesheet" type="text/css" />
     <link href="{{ asset('assets/layouts/layout3/css/themes/default-rtl.min.css')}}" rel="stylesheet" type="text/css" id="style_color" />
@@ -203,8 +204,20 @@ app.request.attributes.get('_route_params')) %}
 {#<script src="{{ asset('assets/global/plugins/jqvmap/jqvmap/maps/jquery.vmap.usa.js')}}" type="text/javascript"></script>#}
 {#<script src="{{ asset('assets/global/plugins/jqvmap/jqvmap/data/jquery.vmap.sampledata.js')}}" type="text/javascript"></script>#}
 <!-- END PAGE LEVEL PLUGINS -->
+<script src="{{ asset('assets/global/scripts/datatable.js')}}" type="text/javascript"></script>
+<script src="{{ asset('assets/global/plugins/datatables/datatables.min.js')}}" type="text/javascript"></script>
+<script src="{{ asset('assets/global/plugins/datatables/plugins/bootstrap/datatables.bootstrap.js')}}" type="text/javascript"></script>
+<script src="{{ asset('assets/global/plugins/bootstrap-datepicker/js/bootstrap-datepicker.min.js')}}" type="text/javascript"></script>
+{#<script src="{{ asset('assets/layouts/js/table-datatables-ajax.min.js')}}" type="text/javascript"></script>#}
 <!-- BEGIN THEME GLOBAL SCRIPTS -->
 <script src="{{ asset('assets/global/scripts/app.min.js')}}" type="text/javascript"></script>
+<script src="{{ asset('assets/global/scripts/table-datatables-buttons.min.js')}}" type="text/javascript"></script>
+
+
+
+
+
+
 <!-- END THEME GLOBAL SCRIPTS -->
 <!-- BEGIN PAGE LEVEL SCRIPTS -->
 {#<script src="{{ asset('assets/pages/scripts/dashboard.min.js')}}" type="text/javascript"></script>#}
@@ -214,6 +227,10 @@ app.request.attributes.get('_route_params')) %}
 {#<script src="{{ asset('assets/layouts/layout3/scripts/demo.min.js')}}" type="text/javascript"></script>#}
 {#<script src="{{ asset('assets/layouts/global/scripts/quick-sidebar.min.js')}}" type="text/javascript"></script>#}
 {#<script src="{{ asset('assets/layouts/global/scripts/quick-nav.min.js')}}" type="text/javascript"></script>#}
+
+
+
+
 <!-- END THEME LAYOUT SCRIPTS -->
 <script>
   $(document).ready(function()
