--- a/app/Resources/views/page/contract.html.twig
+++ b/app/Resources/views/page/contract.html.twig
@@ -43,6 +43,7 @@
                                             مشکل زیر رخ داده است:
                                             {{ form_errors(form.companyName) }}
                                             {{ form_errors(form.userName) }}
+                                            {{ form_errors(form.contractMan) }}
                                             {{ form_errors(form.contractType) }}
                                             {{ form_errors(form.register) }}
                                             {{ form_errors(form.phone) }}
@@ -50,6 +51,8 @@
                                             {{ form_errors(form.direct) }}
                                             {{ form_errors(form.serviceItems) }}
                                             {{ form_errors(form.contractDate) }}
+                                            {{ form_errors(form.contractStartDate) }}
+                                            {{ form_errors(form.contractEndDate) }}
                                             {{ form_errors(form.contractTime) }}
                                             {{ form_errors(form.shareItems) }}
                                             {{ form_errors(form.separate) }}
@@ -71,6 +74,12 @@
                                             <label class="col-md-3 control-label">نام کاربری:</label>
                                             <div class="col-md-9">
                                                 {{  form_widget(form.userName,{'attr':{'class':'form-control input-inline input-medium'}})}}
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <label class="col-md-3 control-label">طرف قرارداد:</label>
+                                            <div class="col-md-9">
+                                                {{  form_widget(form.contractMan,{'attr':{'class':'form-control input-inline input-medium'}})}}
                                             </div>
                                         </div>
                                         <div class="form-group">
@@ -115,10 +124,16 @@
                                                     {{  form_widget(form.telegram,{'attr':{'class':'form-control '}})}}
                                             </div>
                                         </div>
-                                        <div class="form-group contractIDirect" >
-                                            <label class="col-md-3 control-label">مستقیم-نمایشگاهی:</label>
+                                        <div class="form-group contractIExhibition" >
+                                            <label class="col-md-3 control-label">نمایشگاهی:</label>
                                             <div class="col-md-4">
-                                                    {{  form_widget(form.direct,{'attr':{'class':'form-control '}})}}
+                                                    {{  form_widget(form.exhibition,{'attr':{'class':'form-control '}})}}
+                                            </div>
+                                        </div>
+                                        <div class="form-group contractIAdv" >
+                                            <label class="col-md-3 control-label">تبلیغات:</label>
+                                            <div class="col-md-4">
+                                                    {{  form_widget(form.adv,{'attr':{'class':'form-control '}})}}
                                             </div>
                                         </div>
 
@@ -142,6 +157,20 @@
                                             <label class="col-md-3 control-label">تفکیک:</label>
                                             <div class="col-md-4">
                                                 {{  form_widget(form.separate,{'attr':{'class':'form-control'}})}}
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <label class="col-md-3 control-label">تاریخ شروع قرارداد:</label>
+                                            <div class="col-md-4">
+                                                <input id="contractDateStartextra" type="text" class="form-control" name="contractStartTime"/>
+                                                {{  form_widget(form.contractStartDate,{'attr':{'class':'form-control'}})}}
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <label class="col-md-3 control-label">تاریخ پایان قرارداد:</label>
+                                            <div class="col-md-4">
+                                                <input id="contractDateEndextra" type="text" class="form-control" name="contractEndTime"/>
+                                                {{  form_widget(form.contractEndDate,{'attr':{'class':'form-control'}})}}
                                             </div>
                                         </div>
                                         <div class="form-group">
