--- a/app/Resources/views/page/contract.html.twig
+++ b/app/Resources/views/page/contract.html.twig
@@ -65,6 +65,7 @@
                                             {{ form_errors(form.items)}}
                                             {{ form_errors(form.posts)}}
                                             {{ form_errors(form.itemDescription)}}
+                                            {{ form_errors(form.description)}}
 
 
 
@@ -95,16 +96,21 @@
                                             </div>
                                         </div>
                                         <div class="form-group">
-                                            <label class="col-md-3 control-label">مدت قرارداد:</label>
+                                            <label class="col-md-3 control-label">تلفن/موبایل:</label>
                                             <div class="col-md-9">
-
-                                                {{  form_widget(form.contractTime,{'attr':{'class':'form-control input-inline input-medium','type':'hiden'}})}}
+                                                {{  form_widget(form.customerPhone,{'attr':{'class':'form-control input-inline input-medium','type':'text'}})}}
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <label class="col-md-3 control-label">آدرس:</label>
+                                            <div class="col-md-9">
+                                                {{  form_widget(form.customerAddress,{'attr':{'class':'form-control input-inline input-medium','type':'text'}})}}
                                             </div>
                                         </div>
                                         <div class="form-group col-md-12">
                                             <label class="col-md-3 control-label">نوع قرارداد:</label>
                                             <div class="col-md-4">
-                                                    {{  form_widget(form.contractType,{'attr':{'class':'form-control contractType'}})}}
+                                                {{  form_widget(form.contractType,{'attr':{'class':'form-control contractType'}})}}
                                             </div>
                                             <label class="col-md-1 control-label">تاریخ:</label>
                                             <div class="col-md-4">
@@ -115,39 +121,67 @@
                                         <div class="form-group contractIRecharge">
                                             <label class="col-md-3 control-label">تمدید:</label>
                                             <div class="col-md-4">
-                                                    {{  form_widget(form.recharge,{'attr':{'class':'form-control '}})}}
+                                                {{  form_widget(form.recharge,{'attr':{'class':'form-control '}})}}
                                             </div>
                                         </div>
                                         <div class="form-group contractIRegister">
                                             <label class="col-md-3 control-label">رجیستری:</label>
                                             <div class="col-md-4">
-                                                    {{  form_widget(form.register,{'attr':{'class':'form-control '}})}}
+                                                {{  form_widget(form.register,{'attr':{'class':'form-control '}})}}
                                             </div>
                                         </div>
                                         <div class="form-group contractIPhone">
                                             <label class="col-md-3 control-label">تلفنی:</label>
                                             <div class="col-md-4">
-                                                    {{  form_widget(form.phone,{'attr':{'class':'form-control '}})}}
+                                                {{  form_widget(form.phone,{'attr':{'class':'form-control '}})}}
                                             </div>
                                         </div>
                                         <div class="form-group contractITelegram">
                                             <label class="col-md-3 control-label">تلگرام:</label>
                                             <div class="col-md-4">
-                                                    {{  form_widget(form.telegram,{'attr':{'class':'form-control '}})}}
+                                                {{  form_widget(form.telegram,{'attr':{'class':'form-control '}})}}
                                             </div>
                                         </div>
                                         <div class="form-group contractIExhibition" >
                                             <label class="col-md-3 control-label">نمایشگاهی:</label>
                                             <div class="col-md-4">
-                                                    {{  form_widget(form.exhibition,{'attr':{'class':'form-control '}})}}
+                                                {{  form_widget(form.exhibition,{'attr':{'class':'form-control '}})}}
                                             </div>
                                         </div>
                                         <div class="form-group contractIAdv" >
                                             <label class="col-md-3 control-label">تبلیغات:</label>
                                             <div class="col-md-4">
-                                                    {{  form_widget(form.adv,{'attr':{'class':'form-control '}})}}
+                                                {{  form_widget(form.adv,{'attr':{'class':'form-control '}})}}
                                             </div>
                                         </div>
+                                        <div class="form-group">
+                                            <label class="col-md-3 control-label">مدت قرارداد:</label>
+                                            <div class="col-md-9">
+
+                                                {{  form_widget(form.contractTime,{'attr':{'class':'form-control input-inline input-medium','type':'hiden'}})}}
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <label class="col-md-3 control-label">تاریخ شروع قرارداد:</label>
+                                            <div class="col-md-4">
+                                                <input id="contractDateStartextra" type="text" class="form-control" name="contractStartTime"/>
+                                                {{  form_widget(form.contractStartDate,{'attr':{'class':'form-control'}})}}
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <label class="col-md-3 control-label">تاریخ پایان قرارداد:</label>
+                                            <div class="col-md-4">
+                                                <input id="contractDateEndextra" type="text" class="form-control" name="contractEndTime"/>
+                                                {{  form_widget(form.contractEndDate,{'attr':{'class':'form-control'}})}}
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <label class="col-md-3 control-label">تفکیک:</label>
+                                            <div class="col-md-4">
+                                                {{  form_widget(form.separate,{'attr':{'class':'form-control'}})}}
+                                            </div>
+                                        </div>
+
 
                                         <div class="form-group">
                                             <label class="col-md-3 control-label">نوع اشتراک:</label>
@@ -165,26 +199,8 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="form-group">
-                                            <label class="col-md-3 control-label">تفکیک:</label>
-                                            <div class="col-md-4">
-                                                {{  form_widget(form.separate,{'attr':{'class':'form-control'}})}}
-                                            </div>
-                                        </div>
-                                        <div class="form-group">
-                                            <label class="col-md-3 control-label">تاریخ شروع قرارداد:</label>
-                                            <div class="col-md-4">
-                                                <input id="contractDateStartextra" type="text" class="form-control" name="contractStartTime"/>
-                                                {{  form_widget(form.contractStartDate,{'attr':{'class':'form-control'}})}}
-                                            </div>
-                                        </div>
-                                        <div class="form-group">
-                                            <label class="col-md-3 control-label">تاریخ پایان قرارداد:</label>
-                                            <div class="col-md-4">
-                                                <input id="contractDateEndextra" type="text" class="form-control" name="contractEndTime"/>
-                                                {{  form_widget(form.contractEndDate,{'attr':{'class':'form-control'}})}}
-                                            </div>
-                                        </div>
+
+
                                         <div class="form-group">
                                             <label class="col-md-3 control-label">مبلغ قرارداد:</label>
                                             <div class="col-md-9">
@@ -203,18 +219,7 @@
                                                 {{  form_widget(form.basePrice,{'attr':{'class':'form-control input-inline input-medium','type':'text'}})}}
                                             </div>
                                         </div>
-                                        <div class="form-group">
-                                            <label class="col-md-3 control-label">تلفن/موبایل:</label>
-                                            <div class="col-md-9">
-                                                {{  form_widget(form.customerPhone,{'attr':{'class':'form-control input-inline input-medium','type':'text'}})}}
-                                            </div>
-                                        </div>
-                                        <div class="form-group">
-                                            <label class="col-md-3 control-label">آدرس:</label>
-                                            <div class="col-md-9">
-                                                {{  form_widget(form.customerAddress,{'attr':{'class':'form-control input-inline input-medium','type':'text'}})}}
-                                            </div>
-                                        </div>
+
                                         <div class="form-group">
                                             <label class="col-md-3 control-label">سایر خدمات:</label>
                                             <div class="col-md-9">
@@ -255,6 +260,13 @@
                                                 <div class="col-md-9">
                                                     {{ form_widget(form.itemDescription,{'attr':{'class':'form-control '}}) }}
                                                 </div>
+                                            </div>
+
+                                        </div>
+                                        <div class="form-group ">
+                                            <label class="col-md-3 control-label">توضیحات :</label>
+                                            <div class="col-md-9">
+                                                {{ form_widget(form.description,{'attr':{'class':'form-control '}}) }}
                                             </div>
                                         </div>
                                     </div>
