--- a/app/Resources/views/layout/layout.html.twig
+++ b/app/Resources/views/layout/layout.html.twig
@@ -110,6 +110,10 @@ app.request.attributes.get('_route_params')) %}
                                     <a href="/contracts"> لیست قرار دادها
                                     </a>
                                 </li>
+                                <li aria-haspopup="true" class="menu-dropdown mega-menu-dropdown  {% if '/items'==currentPath %} active{% endif %}">
+                                    <a href="/items"> لیست مرسولات
+                                    </a>
+                                </li>
                                 <li aria-haspopup="true" class="menu-dropdown classic-menu-dropdown {% if 'statistics' in currentPath %} active{% endif %}">
                                     <a href="/statistics">ثبت آمار
                                     </a>
