--- a/app/Resources/views/page/contract.html.twig
+++ b/app/Resources/views/page/contract.html.twig
@@ -275,6 +275,7 @@
                                             <div class="col-md-offset-3 col-md-9">
                                                 <button type="submit" class="btn green">Submit</button>
                                                 <button type="button" class="btn default">Cancel</button>
+                                                <button type="button" class="btn default" id="preFactore" >prefactor</button>
                                             </div>
                                         </div>
                                     </div>
