Add uploads to ignore

--- a/app/Resources/views/report/preFactor.html.twig
+++ b/app/Resources/views/report/preFactor.html.twig
@@ -35,14 +35,14 @@
     </tr>
     <tr>
         <td style="width: 50%">نام حقیقی :</td>
-        <td style="width: 50%">نام حقوقی :</td>
+        <td style="width: 50%">نام حقوقی :{{ contract.companyName }}</td>
     </tr>
     <tr>
         <td style="width: 50%">نام کاربری :</td>
-        <td style="width: 50%">تلفن / موبایل :</td>
+        <td style="width: 50%">تلفن / موبایل :{{ contract.customerPhone }}</td>
     </tr>
     <tr>
-        <td colspan="2">آدرس :</td>
+        <td colspan="2">آدرس :{{ contract.customerAddress}}</td>
     </tr>
     <tr>
         <th colspan="2">فروشنده</th>
