--- a/app/Resources/views/page/showContract.html.twig
+++ b/app/Resources/views/page/showContract.html.twig
@@ -30,7 +30,9 @@
                                         <span class="caption-subject font-dark sbold uppercase">فهرست قرار دادها</span>
                                     </div>
                                 </div>
-
+                                <div id="dialog" title="پیش فاکتور">
+                                    <p id="getPdf"></p>
+                                </div>
                             <form class="searchForm" role="form" >
                                 <div class="col-md-3 form-group">
                                     <label for="search">وضعیت فاکتور</label>
@@ -72,4 +74,21 @@
         <!-- END CONTENT BODY -->
     </div>
     <!-- END CONTENT -->
+        <script>
+            function callpreFactore(id) {
+                $.ajax({
+                    url: "/api/preFactor/"+id,
+                    type: "GET",
+                    data: {},
+                    success: function (response) {
+                        $('#getPdf').html('<a href="'+response+'" target="_blank">لطفا برای دیدن پیش فاکتور روی لینک زیر کلیک کنید</a>');
+                        $( "#dialog" ).dialog();
+                        return false;
+                    },
+                    error: function (jqXHR, textStatus, errorThrown) {
+                        console.log(textStatus, errorThrown);
+                    }
+                });
+            }
+            </script>
 {% endblock %}
